2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/config.guess, lib/config.sub, lib/texinfo.tex, lib/INSTALL,
	INSTALL: New upstream versions.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/sinclude.test: Check for m4_include too.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/sinclude.test: Rename the package as amsinclude;
	am__sinclude still trigers the sinclude macro once it has been
	converted to am--sinclude.
	Reported by Nicolas Joly.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (API versioning): Typo.

2002-06-10  Nicolas Joly  <njoly@pasteur.fr>

	* THANKS (Nicolas Joly): Remove duplicate.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* Makefile.am (maintainer-check): Fix $MAKE -e detection.
	* tests/yacc7.test: Use rm -f.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs (ACLOCAL, AUTOMAKE): Use absolute paths.
	* tests/subpkg.test: New file.
	* tests/Makefile.am (TESTS): Add subpkg.test.

2002-06-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/318:
	* tests/nobase.test: Rewrite to test _HEADERS, _DATA, _SCRIPTS,
	_PROGRAMS, _LIBRARIES, and _LTLIBRARIES.
	* lib/am/scripts.am (install-%DIR%SCRIPTS,
	uninstall-%DIR%SCRIPTS): Honor nobase_; strip the directory by
	default.
	(?%DIR%SCRIPT_INSTALL): New variable.
	* lib/am/header-vars.am (install_sh_SCRIPT): New variable.
	Reported by Eric Siegerman.

2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (lang_yacc_target_hook): Add rule to recover from
	the removal of $header.
	* lib/am/yacc.am (%BASE%.h): Remove (duplicate with the one
	output by lang_yacc_target_hook).
	* tests/yacc7.test: Try to recreate foo.h after its removal.
	* tests/yacc8.test: Add `AM_YFLAGS = -d' and try to recreate
	parse.h too.
	Reported by Bernd Jendrissek.

2002-06-08  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/317:
	* Makefile.am (maintainer-check): Disallow `for f in $(FILES)',